# SmartGo5

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: main.yml
docs/: käyttöohje.md  maarittelydokumentti.md  määritelydokumentti  testausdokumentti.md  toteusdokumentti.md
docs/viikkoraportit/: viikko1.md  viikko2.md  viikko3.md  viikko4.md  viikko5.md  viiko6.md
src/: app.py  gomoku.py  gomoku_ai.py  index.py  ui.py
src/tests/: test_board.py  test_game.py  test_gomoku_ai.py  test_win_checker.py
