[tool.poetry]
name = "smartgo5"
version = "0.1.0"
description = ""
authors = ["imsyc75 <songyuchen2003@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.2.1"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
pylint = "^3.3.3"
unittest = "^3.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
